[workspace]
resolver = "2"
members = ["crates/hello_world", "crates/rust_cli"]

[workspace.packages]
name = "solana_program"
version = "0.1.0"
edition = "2021"

members = [
    "crates/rust_cli",
    "crates/hello_world",
] # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
hello-world = { path = "crates/hello_world" }

tokio = { version = "1.37.0", features = ["full"] }
borsh = { version = "1.4.0", features = ["std", "derive"] }
mpl-token-metadata = "4.1.2"
solana-program = "1.18.9"
spl-associated-token-account = { version = "3.0.2", features = [
    "no-entrypoint",
] }
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
thiserror = "1.0.58"
async-trait = "0.1.79"
solana-sdk = "1.18.9"
